src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <description>Is this person active?</description>
        <inlineHelpText>Is this person active?</inlineHelpText>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>Addressee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <description>Attention or c/o line for mailing labels.</description>
        <inlineHelpText>Attention or c/o line for mailing labels.</inlineHelpText>
        <label>Attn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <description>Should be exactly like the Communication Preference field in the Lead object.  Information from that object is transferred here with the Lead is converted to a Contact.</description>
        <inlineHelpText>Should be exactly like the Communication Preference field in the Lead object.  Information from that object is transferred here with the Lead is converted to a Contact.</inlineHelpText>
        <label>Communication Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By email</fullName>
                </value>
                <value>
                    <fullName>By mail</fullName>
                </value>
                <value>
                    <fullName>By phone</fullName>
                </value>
                <value>
                    <fullName>By Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>hyperlink (&quot;/&quot; &amp;Id, LastName &amp; &quot;, &quot; &amp; FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Membership_Expires__c</fullName>
        <inlineHelpText>Memberships can be assigned to either accounts or contacts.  If it&apos;s assigned to a contact, this is the date it expires.</inlineHelpText>
        <label>Contact Membership Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dear__c</fullName>
        <description>For letters and messages, how you&apos;d like your saluation to read.  For example, for John Roberts you may want: Dear JR:</description>
        <inlineHelpText>For letters and messages, the words you&apos;d like after the saluation &quot;Dear &quot;.  For example, for John Roberts you may want: Dear JR.  In this case, you&apos;d enter &quot;JR&quot; in the field.  If left blank, it populates with the first name.</inlineHelpText>
        <label>Dear</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not__c</fullName>
        <description>Permissions for communicating with contact.  This field must be exactly the same as the Do_Not field in the Lead object, because information from the Lead is transferred here with Leads are converted to Contacts.</description>
        <inlineHelpText>WaterGrass assumes that contacts will accept ALL forms of communication, unless noted otherwise here.  You can set permissions for CONTACTS on this page, for ACCOUNTS on the accounts page.</inlineHelpText>
        <label>Do Not</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>no email</fullName>
                </value>
                <value>
                    <fullName>no email solicitations</fullName>
                </value>
                <value>
                    <fullName>no mail</fullName>
                </value>
                <value>
                    <fullName>no mail solicitations</fullName>
                </value>
                <value>
                    <fullName>no phone calls</fullName>
                </value>
                <value>
                    <fullName>no phone solicitations</fullName>
                </value>
                <value>
                    <fullName>only one solicitation a year</fullName>
                </value>
                <value>
                    <fullName>don&apos;t share my name with other groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Contrib_Cat__c</fullName>
        <description>The type of campaign that brought in the contact&apos;s first contribution. This field is calculated automatically.</description>
        <inlineHelpText>The type of campaign that brought in the contact&apos;s first contribution. This field is calculated automatically.</inlineHelpText>
        <label>First_Contrib_Cat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contrib_Source__c</fullName>
        <description>From ManageContribs</description>
        <inlineHelpText>From ManageContribs</inlineHelpText>
        <label>First_Contrib_Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Donate_Amount__c</fullName>
        <description>Calculated - amount of the first donation with a recordType which is one of the current individual donation member types.</description>
        <inlineHelpText>Calculated - amount of the first donation with a recordType which is one of the current individual donation member types.</inlineHelpText>
        <label>First Donate Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Donate_Date__c</fullName>
        <label>First_Donate_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ImportObjectSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import Object Source</label>
        <referenceTo>ImportObject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>Jurisdiction you reside in.</description>
        <inlineHelpText>Jurisdiction you reside in.</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Town of Morse</fullName>
                </value>
                <value>
                    <fullName>Town of Anderson</fullName>
                </value>
                <value>
                    <fullName>Mellen</fullName>
                </value>
                <value>
                    <fullName>Hurley</fullName>
                </value>
                <value>
                    <fullName>City of Ashland</fullName>
                </value>
                <value>
                    <fullName>Odanah</fullName>
                </value>
                <value>
                    <fullName>Iron County (not in Town of Anderson or Hurley)</fullName>
                </value>
                <value>
                    <fullName>Ashland County (not in Town of Morse, Mellen or Odanah)</fullName>
                </value>
                <value>
                    <fullName>Other (for those outside the above mentioned areas)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Contrib_Amt__c</fullName>
        <description>This field is calculated by the &quot;Recalculate Gifts&quot; button</description>
        <label>Largest_Contrib_Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Largest_Contrib_Date__c</fullName>
        <description>This field calculated by the &quot;Recalculate Gifts&quot; button.</description>
        <inlineHelpText>This field calculated by the &quot;Recalculate Gifts&quot; button.</inlineHelpText>
        <label>Largest_Contrib_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contrib_Amt__c</fullName>
        <description>This field is updated by the &quot;Recalculate Giving&quot; button</description>
        <inlineHelpText>This field is updated by the &quot;Recalculate Giving&quot; button</inlineHelpText>
        <label>Last Contrib Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Contrib_Date__c</fullName>
        <description>This field is calculated by the &quot;Recalculate Gifts&quot; button.</description>
        <inlineHelpText>This field is calculated by the &quot;Recalculate Gifts&quot; button.</inlineHelpText>
        <label>Last Contrib Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Donate_Amt__c</fullName>
        <description>Amount of the last donation classified as an individual donation.  (See the Custom Settings for Individual Contribution Types.)</description>
        <inlineHelpText>Amount of the last donation classified as an individual donation.  (See the Custom Settings for Individual Contribution Types.)</inlineHelpText>
        <label>Last_Donate_Amt</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donate_Date__c</fullName>
        <description>Calculated by ManageContribs</description>
        <inlineHelpText>Calculated by ManageContribs</inlineHelpText>
        <label>Last_Donate_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Year_Donations__c</fullName>
        <description>Individual donations from the last calendar year.</description>
        <inlineHelpText>Individual donations from the last calendar year.</inlineHelpText>
        <label>Last_Year_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Year_Giving__c</fullName>
        <description>This field calculated by the &quot;Recalculate Giving&quot; button.</description>
        <inlineHelpText>This field calculated by the &quot;Recalculate Giving&quot; button.</inlineHelpText>
        <label>Last Year Giving</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Year_VolHours__c</fullName>
        <description>Calculated automatically</description>
        <inlineHelpText>Calculated automatically</inlineHelpText>
        <label>Last_Year_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_ID__c</fullName>
        <description>Include here any legacy ID number from the old database.</description>
        <inlineHelpText>Include here any legacy ID number from the old database.  A hard-learned lesson: If you ever want to correct errors in data import, it&apos;s very helpful to have this.</inlineHelpText>
        <label>Legacy Contact ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LifetimeVolhours__c</fullName>
        <label>LifetimeVolhours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Donation_Count__c</fullName>
        <description>Number of donations by this contact which are one of the current individual record Types.</description>
        <inlineHelpText>Number of donations by this contact which are one of the current individual record Types.</inlineHelpText>
        <label>Lifetime Donation Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Giving__c</fullName>
        <description>This field is updated by a batch controller once a day.</description>
        <inlineHelpText>This field is updated by a batch controller once a day.</inlineHelpText>
        <label>Lifetime Giving</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lookup_Key__c</fullName>
        <description>Key for Import Object Lookup Process</description>
        <formula>IF ( 
AND ( 
NOT(ISBLANK(FirstName)), 
NOT(ISBLANK(LastName)), 
NOT(ISBLANK(MailingPostalCode)) 
), 
LOWER(FirstName) &amp; LOWER(LastName) &amp; LOWER(MailingPostalCode), 
&quot;&quot; 
)</formula>
        <inlineHelpText>Key for Import Object Lookup Process</inlineHelpText>
        <label>Lookup Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Lists__c</fullName>
        <description>What information would you like to us to send you?</description>
        <inlineHelpText>What information would you like to us to send you?</inlineHelpText>
        <label>Mailing Lists</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deep Mine updates</fullName>
                </value>
                <value>
                    <fullName>Allegheny Energy Center updates</fullName>
                </value>
                <value>
                    <fullName>Trail news</fullName>
                </value>
                <value>
                    <fullName>Youghiogheny River issues</fullName>
                </value>
                <value>
                    <fullName>Shale Gas issues</fullName>
                </value>
                <value>
                    <fullName>Volunteer opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Donor_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this contact to get major donor communications (and not regular appeals).  This box is automatically updated when the major donor report is run.</description>
        <inlineHelpText>Check this box if you want this contact to get major donor communications (and not regular appeals).  This box is automatically updated when the major donor report is run.</inlineHelpText>
        <label>Major Donor Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000mr5G&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000MKgu&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_for_Contact_Cutoff_Date__c</fullName>
        <inlineHelpText>When should the newsletter subscription expire?</inlineHelpText>
        <label>Newsletter for Contact Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Newsletter_for_Contact__c</fullName>
        <inlineHelpText>Check if you want the contact to receive a newsletter.  (The newsletter can also go to the account, or both.)</inlineHelpText>
        <label>Newsletter for Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_LeadSource__c</fullName>
        <description>The first time LeadSource is populated, store it here. Afterwards, don&apos;t overwrite it. Only Admins can edit the field.</description>
        <inlineHelpText>The first time LeadSource is populated, store it here. Afterwards, don&apos;t overwrite it. Only Admins can edit the field.</inlineHelpText>
        <label>Original_LeadSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Duplicates</relationshipLabel>
        <relationshipName>Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_emails__c</fullName>
        <description>Store other emails here.</description>
        <inlineHelpText>Store other emails here, like this:  Home: johnd@home.org.  Work: Johnd@abc.com.  When you need to use them, type them into the &quot;Email to use&quot; field.  (It&apos;s clunky but it always works.)</inlineHelpText>
        <label>Other emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over_18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred_Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Protects the contact&apos;s address from being overwritten by updates to the account.  Otherwise, the EnterAccountContactContribution module automatically pushes account address updates to contacts.</description>
        <inlineHelpText>Protects the contact&apos;s address from being overwritten by updates to the account.  Otherwise, the EnterAccountContactContribution module automatically pushes account address updates to contacts.</inlineHelpText>
        <label>Protected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Text_Contacts__c</fullName>
        <formula>CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY(TODAY())) 
+ &quot;, &quot; + TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Text Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_Event_Count__c</fullName>
        <description>How many volunteer events has this person participated in?</description>
        <inlineHelpText>How many volunteer events has this person participated in?</inlineHelpText>
        <label>Vol_Event_Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interests__c</fullName>
        <description>Tree Planting
Nursery Maintenance
Street Tree
Rainbarrel
Stream Team
Project Clean Stream
Fundraising
Office Work
Public Relations
Education and Outreach</description>
        <label>Volunteer Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education and Outreach</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Invasive Species Removal</fullName>
                </value>
                <value>
                    <fullName>Mining Issue</fullName>
                </value>
                <value>
                    <fullName>Nursery Maintenance</fullName>
                </value>
                <value>
                    <fullName>Office Administration</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Rainbarrel</fullName>
                </value>
                <value>
                    <fullName>Stream Cleanup</fullName>
                </value>
                <value>
                    <fullName>Street Tree</fullName>
                </value>
                <value>
                    <fullName>Trail Maintenance</fullName>
                </value>
                <value>
                    <fullName>Tree Planting</fullName>
                </value>
                <value>
                    <fullName>Water Quality Monitoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <label>Volunteer_Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Education and outreach</fullName>
                </value>
                <value>
                    <fullName>Data analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X3_Years_Ago_Donations__c</fullName>
        <label>3_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Years_Ago_VolHours__c</fullName>
        <label>3_Years_Ago_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4_Years_Ago_Donations__c</fullName>
        <label>4_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4_Years_Ago_VolHours__c</fullName>
        <label>4_Years_Ago_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Years_Ago_Donations__c</fullName>
        <label>5_Years_Ago_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5_Years_Ago_VolHours__c</fullName>
        <label>5_Years_Ago_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearToDate_VolHours__c</fullName>
        <description>Calculated by ManageContribs.</description>
        <inlineHelpText>Calculated by ManageContribs.</inlineHelpText>
        <label>YearToDate_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Before_Last_Donations__c</fullName>
        <label>Year_Before_Last_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Before_Last_Giving__c</fullName>
        <description>This field calculated by the &quot;Recalculate Giving&quot; button.</description>
        <inlineHelpText>This field calculated by the &quot;Recalculate Giving&quot; button.</inlineHelpText>
        <label>Year Before Last Giving</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_Before_Last_VolHours__c</fullName>
        <label>Year_Before_Last_VolHours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YeartoDate_Donations__c</fullName>
        <description>Only contributions which match the individual giving types.  Calculated automatically by ManageContribs.</description>
        <inlineHelpText>Only contributions which match the individual giving types.  Calculated automatically by ManageContribs.</inlineHelpText>
        <label>YeartoDate_Donations</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YeartoDate_Giving__c</fullName>
        <description>This field calculated by the &quot;Recalculate Giving&quot; button.</description>
        <inlineHelpText>This field calculated by the &quot;Recalculate Giving&quot; button.</inlineHelpText>
        <label>YeartoDate_Giving</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>X2011_June_Renewals_1st_mailing</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>2011 June Renewals 1st mailing</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Choose_One_of_the_Emails_to_be_Preferred</fullName>
        <active>false</active>
        <description>If there is no Preferred Email chosen, and two (or more) email addresses are filled in, force the selection of one to be preferred.</description>
        <errorConditionFormula>and(
        or(
        and( not(isblank(Personal_Email__c)) , not(isblank(Work_Email__c)) ) ,
        and( not(isblank(Personal_Email__c)),not(isblank(Other_Email__c)) ) ,
        and( not(isblank(Work_Email__c)) , not(isblank(Other_Email__c)) )
        ) ,
        text( Preferred_Email__c ) = null )</errorConditionFormula>
        <errorDisplayField>Preferred_Email__c</errorDisplayField>
        <errorMessage>Select an existing email address to be the preferred email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Email_Choice_Must_Exist</fullName>
        <active>true</active>
        <description>Show error if Preferred Email selection is not populated.</description>
        <errorConditionFormula>or(
            and( ispickval(Preferred_Email__c , &quot;Personal&quot;) , Personal_Email__c = null ),
            and( ispickval(Preferred_Email__c , &quot;Work&quot;) , Work_Email__c = null ) ,
            and( ispickval(Preferred_Email__c , &quot;Alternate&quot;) , Other_Email__c = null )
            )</errorConditionFormula>
        <errorDisplayField>Preferred_Email__c</errorDisplayField>
        <errorMessage>Select an existing email address to be the preferred email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Error</fullName>
        <active>true</active>
        <errorConditionFormula>LastName = &quot;TEST52A&quot;</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Test C Fail</errorMessage>
    </validationRules>
</CustomObject>